# Saguaros-CyberHub

./: .gitignore  CyberHub Network v1.drawio  CyberHub Traffick v1.1.drawio  LICENSE  README.md  install.sh
archive/: CyberHub Network v1.drawio.textClipping
cybercore/: README.md  cybercore-compose.yml  pyproject.toml  start.sh  stop.sh
cybercore/auth/: README.md  configure-ldap.py  docker-entrypoint.sh  freeipa-setup.yml  keycloak-compose.yml  keycloak-setup.sh  samba-setup.yml  sssd-setup.yml
cybercore/automation/inventory/: hosts.ini
cybercore/automation/ollama/: .ollama
cybercore/automation/playbooks/: check-services.yml
cybercore/automation/scripts/: start.sh  stop.sh
cybercore/config/n8n/: init.sh
cybercore/config/n8n/workflows/: Add User.json
cybercore/config/postgres/: 001_init_db.sql  050_apply_modules.sh
cybercore/config/postgres/modules/: crucible.sql  cyberlabs.sql  forge.sql  library.sql  university.sql  wiki.sql
cybercore/front-end/: the-hub-setup.yml
cybercore/src/cybercore-main/: config.py  main.py  requirements.txt
cybercore/src/cybercore-main/modules/: __init__.py  ansible_runner.py  db.py  n8n_api.py
cybercore/user-profiles/: README.md  dirsync.py  examples.sh  start.sh  stop.sh  universal-compose.yml  universal_ldap_sync.py  user-postgresql-compose.yml
cybercore/user-profiles/db/: init.sql
cybercore/vault/agent/: config.hcl
cybercore/vault/agent/templates/: postgres.env.ctmpl
cyberhub-infrastructure/: README.md  infrastructure-inventory.ini
documentation/: README.md  volunteer_announcement.md
the-forge/: README.md
(+114 files in other folders)
